--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.fullPage.css' %}"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="{% static 'js/vendors/jquery.easings.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.fullPage.min.js' %}"></script>
     
-    <script type="text/javascript">
-    	$(document).ready(function() {
-        	$('#fullpage').fullpage({
-                sectionsColor: ['#f2f2f2', '#4BBFC3', '#7BAABE', 'whitesmoke', '#000'],
-            });
-    	});
-	</script>
+    <script type="text/javascript" src="{% static 'js/fullPage.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stilovi.css' %}"/>
 </head>
 
 <body>
 	<div id="fullpage">
-    	<div class="section">Section 1</div>
-    	<div class="section">Section 2</div>
-    	<div class="section">Section 3</div>
+    	<div class="section">
+            <div class="outer">
+                <div class="inner1"></div>
+                <div class="inner2">
+                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
+                <h2 id="naslov">GROW<sup>+</sup></h2>
+                </div>
+            </div>
+        </div>
+    	<div class="section">
+        </div>
+    	<div class="section">
+        </div>
 	</div>
 </body>
 </html>
