--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -21,10 +21,9 @@
 	<div id="fullpage">
     	<div class="section">
             <div class="outer">
-                <div class="inner1"></div>
-                <div class="inner2">
-                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
-                <h2 id="naslov">GROW<sup>+</sup></h2>
+                <div class="inner">
+                    <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
+                    <h2 id="naslov">GROW<sup>+</sup></h2>
                 </div>
             </div>
         </div>
