--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -20,12 +20,8 @@
 <body>
 	<div id="fullpage">
     	<div class="section">
-            <div class="outer">
-                <div class="inner">
                     <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
-                    <h2 id="naslov">GROW<sup>+</sup></h2>
-                </div>
-            </div>
+                    <h2 id="naslov" style="text-align:center">GROW<sup>+</sup></h2>
         </div>
     	<div class="section">
         </div>
