--- a/IndexPage/static/css/stilovi.css
+++ b/IndexPage/static/css/stilovi.css
@@ -1,20 +1,6 @@
-.outer {
-  display: flex;
-  display: -webkit-flex;
-	position: absolute;
-	top: 0; bottom: 0;
-	left: 0; right: 0;
-	background-color: blue;
-  text-align: center;
-  align-items: center;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
 img {
-  max-width:100%;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-#naslov {
-  color: white;
-}
-
