--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -20,8 +20,10 @@
 <body>
 	<div id="fullpage">
     	<div class="section">
-                    <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
-                    <h2 id="naslov" style="text-align:center">GROW<sup>+</sup></h2>
+            <div id="a">
+                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:auto;">
+                <h2 id="naslov" style="text-align:center">GROW<sup>+</sup></h2>
+            </div>
         </div>
     	<div class="section">
         </div>
