--- a/IndexPage/static/css/stilovi.css
+++ b/IndexPage/static/css/stilovi.css
@@ -1,9 +1,19 @@
 img {
-  width: 100%;
+  max-width: 100%;
+  height:auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 #a {
 	background-color: red;
+}
+@media screen and (max-height: 480px) {
+	img {
+  		width: 150px;
+  		height:auto;
+  		display: block;
+  		margin-left: auto;
+  		margin-right: auto;
+	}
 }
