--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -21,7 +21,7 @@
 	<div id="fullpage">
     	<div class="section">
             <div id="a">
-                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo" style="max-width:250px;height:250px;">
+                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo">
                 <h2 id="naslov" style="text-align:center">GROW<sup>+</sup></h2>
             </div>
         </div>
