--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -20,9 +20,8 @@
 <body>
 	<div id="fullpage">
     	<div class="section">
-            <div id="a">
-                <img src="{% static 'img/logo.jpg' %}" alt="Grow+ logo">
-                <h2 id="naslov" style="text-align:center">GROW<sup>+</sup></h2>
+            <div>
+                <img src="{% static 'img/grow+_logo.jpg' %}" alt="Grow+ logo">
             </div>
         </div>
     	<div class="section">
