--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <title>Grow Positive</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.fullPage.css' %}"/>
@@ -15,18 +16,68 @@
     
     <script type="text/javascript" src="{% static 'js/fullPage.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/stilovi.css' %}"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 	<div id="fullpage">
     	<div class="section">
             <div>
-                <img src="{% static 'img/grow+_logo.jpg' %}" alt="Grow+ logo">
+                <img id="logo" src="{% static 'img/grow+_logo.jpg' %}" alt="Grow+ logo">
             </div>
         </div>
     	<div class="section">
+            <div class="container-fluid about text-center">
+                    <h1 id="ab">What is Grow positive app?</h1>
+                    <p id="ab">Grow is a little place for your emotions, thoughts and self development. With positive board and community you can achieve your goals and share with others.
+                    </p>
+            </div>
         </div>
     	<div class="section">
+            <div class="container-fluid board text-center">
+                <div><h1 id="bo">Positive board.</h1></div>
+            <div class="panel-group pa" id="accordion">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Collapsible Group 2</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim     veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Collapsible Group 3</a>
+                        </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
         </div>
 	</div>
 </body>
