--- a/IndexPage/static/css/stilovi.css
+++ b/IndexPage/static/css/stilovi.css
@@ -29,12 +29,12 @@ a {
 	background-color: #1BB24B;
 }
 h1#ab {	
-	font-size: 4.5em;
+	font-size: 10vmin;
 	padding: 10% 0 2.5%;
 	color: #555354;
 }
 p#ab {
-	font-size: 1.75em;
+	font-size: 4.5vmin;
 	color: #F2F2F2;
 	padding: 5% 25%;
 }
