--- a/IndexPage/static/css/stilovi.css
+++ b/IndexPage/static/css/stilovi.css
@@ -10,7 +10,7 @@ p {
 }
 a {
 	font-family: 'Roboto Slab', serif;	
-	font-size: 2em;
+	font-size: 4vmin;
 }
 #logo {
   width: 300px;
@@ -39,12 +39,12 @@ p#ab {
 	padding: 5% 25%;
 }
 h1#bo {	
-	font-size: 4.5em;
+	font-size: 8vmin;
 	padding: 5% 0 2.5%;
 	color: #F2F2F2;
 }
 p#bo {
-	font-size: 1.75em;
+	font-size: 3vmin;
 	color: #555354;
 	padding: 5% 25%;
 }
