--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -36,47 +36,63 @@
     	<div class="section">
             <div class="container-fluid board text-center">
                 <div><h1 id="bo">Positive board.</h1></div>
-            <div class="panel-group pa" id="accordion">
+            <div class="panel-group pa text-left" id="accordion">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
+                        <span style="color:#F0A554" class="glyphicon glyphicon-ok-circle"></span>
+                        <a class="funkc" data-toggle="collapse" data-parent="#accordion" href="#collapse1">MOOD TRACKER</a>
                         </h4>
                     </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
+                    <div id="collapse1" class="panel-collapse collapse text-center">
+                        <div class="panel-body">Track your daily mood.
                         </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Collapsible Group 2</a>
+                        <span style="color:#F8C760" class="glyphicon glyphicon-ok-circle"></span>
+                        <a class="funkc" data-toggle="collapse" data-parent="#accordion" href="#collapse2">SELF DEVELOPMENT</a>
                         </h4>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim     veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <div id="collapse2" class="panel-collapse collapse text-center">
+                        <div class="panel-body">Check it out for cool stories!
                         </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Collapsible Group 3</a>
+                        <span style="color:#1BB24B" class="glyphicon glyphicon-ok-circle"></span>
+                        <a class="funkc" data-toggle="collapse" data-parent="#accordion" href="#collapse3">POSITIVE NOTES</a>
                         </h4>
                     </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <div id="collapse3" class="panel-collapse collapse text-center">
+                        <div class="panel-body">Find motivation!
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <span style="color:#4CB3ED" class="glyphicon glyphicon-ok-circle"></span>
+                        <a class="funkc" data-toggle="collapse" data-parent="#accordion" href="#collapse4">DIARY</a>
+                        </h4>
+                    </div>
+                    <div id="collapse4" class="panel-collapse collapse text-center">
+                        <div class="panel-body">Write your thoughts worth thinking...
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="container-fluid komuna text-center">
+                    <h1 id="ab"></h1>
+                    <p id="ab">
+                    </p>
             </div>
         </div>
 	</div>
