--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -13,17 +13,17 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="{% static 'js/vendors/jquery.easings.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.fullPage.min.js' %}"></script>
-    
     <script type="text/javascript" src="{% static 'js/fullPage.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/stilovi.css' %}"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="{% static 'js/cs.js' %}"></script>
 </head>
 
 <body>
 	<div id="fullpage">
     	<div class="section">
-            <div class="container-fluid">
-                <img id="logo" src="{% static 'img/logo1.png' %}" alt="Grow+ logo">
+            <div class="container-fluid logo">
+                <img id="lo" src="{% static 'img/logo1.png' %}" alt="Grow+ logo">
             </div>
         </div>
     	<div class="section">
@@ -93,9 +93,7 @@
                     <h1 id="cm">Community.</h1>
                     <p id="cm">This is our positive world where you can be a user or registered as coach. Be active on topic, share your story or get motivated with our coaches.
                     </p>
-                    <div style="padding: 5% 0 0">
                     <button id="botun" type="button" class="btn btn-default">Join our Community!</button>
-                    </div>
             </div>
         </div>
 	</div>
