--- a/IndexPage/templates/IndexPage/index.html
+++ b/IndexPage/templates/IndexPage/index.html
@@ -23,7 +23,7 @@
 	<div id="fullpage">
     	<div class="section">
             <div class="container-fluid logo">
-                <img id="lo" src="{% static 'img/logo1.png' %}" alt="Grow+ logo">
+                <img id="lo" style="width:42.5vmin" src="{% static 'img/logo1.png' %}" alt="Grow+ logo">
             </div>
         </div>
     	<div class="section">
